# SPI-DECT

./: README.md
!Streaming/ESP32/: DMAmain.c  oldMain.c
!Streaming/ESP32/main/: main.c
!Streaming/Nordic/: CMakeLists.txt  DMAmain.c  final.c  funciona.c  newMain.c  nrf9161dk_nrf9161_ns.overlay  otraPosibilidad.c  prj.conf
!Streaming/Nordic/src/: main.c
1_DMA_DISABLE/ESP32/main/: main.c
1_DMA_DISABLE/Nordic/: prj.conf
1_DMA_DISABLE/Nordic/src/: main.c
2_SPI_RANDOM/Nordic/src/: main.c
3_SPI_2us/nordic/: CMakeLists.txt
3_SPI_2us/nordic/src/: main.c
Deprecated/: README.md
Deprecated/!!!!/nRF9161/: nrf9161dk_nrf9161_ns.overlay  prj.conf
Deprecated/!Balding/nRF9161/: CMakeLists.txt  nrf9161dk_nrf9161_ns.overlay
Deprecated/2_SPI_RANDOM/ESP/: CMakeLists.txt
Deprecated/2_SPI_RANDOM/Nordic/: prj.conf
Deprecated/VoSPI/Camera_slv/: CMakeLists.txt
Deprecated/esp32_TEST/master/: CMakeLists.txt
Deprecated/old/DevAcademyMaster/: CMakeLists.txt
Deprecated/old/DevAcademySlave/: CMakeLists.txt
Deprecated/old/IVAN_m/: CMakeLists.txt  prj.conf
Deprecated/old/i2c_discard/: ERROR.txt
Previous/: README.md
Previous/camera/: nrf9161dk_nrf9161_ns.overlay  prj.conf
z_material/I2C-Test/: CMakeLists.txt  nrf9161dk_nrf9161_ns.overlay  prj.conf
z_material/camera/: CMakeLists.txt
z_material/camera/old_tests/: RX_m.c  nowork.c  test.c  tx.c
z_material/camera/raspi/: camera_raspi.c  count_transmit.c
z_material/camera/src/: mac_header_field.c  mac_header_field.h  mac_message.c  math_functions.h  physical_header_field.h  procedures.h  tx_rx.h
(+210 files in other folders)
